--- a/styles/ParksLibrary.module.css
+++ b/styles/ParksLibrary.module.css
@@ -10,10 +10,6 @@
 
 /*PARK CARDS HEADER*/
 
-.imageSearchBar {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
 
 .parkLibHeader {
   display: flex;
@@ -57,6 +53,8 @@
 
 .filterIcon {
   z-index: 2;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 /*PARK LIBRARY CARDS SECTION*/
@@ -68,8 +66,8 @@
   left: 50%;
   transform: translate(-50%);
   gap: 1.25rem;
-  z-index: 5;
 }
+
 
 .parkCard {
   display: flex;
@@ -101,6 +99,7 @@
   max-width: 430px;
   margin-top: 1.25rem;
   padding-left: 10px;
+  z-index: 1;
 }
 
 .BCPark1 {
@@ -110,15 +109,18 @@
   border-radius: 10px;
   align-content: center;
   text-align: center;
+  z-index: 1;
 }
 
 .BCParksLink {
   text-decoration: none;
   color: black;
+  z-index: 1;
 }
 
 .BCParksLink a {
   text-decoration: none;
+  z-index: 1;
 }
 
 
@@ -129,6 +131,7 @@
   border-radius: 10px;
   align-content: center;
   text-align: center;
+  z-index: 1;
 }
 
 .BCPark3 {
@@ -138,6 +141,7 @@
   border-radius: 10px;
   align-content: center;
   text-align: center;
+  z-index: 1;
 }
 
 .background {
